// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component user interaction 1`] = `
Array [
  Object {
    "componentInstanceId": "instance-1",
    "payload": Object {
      "updateId": 1,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/button/0/text",
              "text": "Hello, world!",
            },
          ],
          "data": Object {
            "on": Object {
              "click": true,
            },
          },
          "key": "/0/button",
          "sel": "button",
        },
        Object {
          "children": Array [],
          "data": Object {},
          "key": "/1/h1",
          "sel": "h1",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "instance-1",
    "payload": Object {
      "updateId": 2,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/button/0/text",
              "text": "Hello, world!",
            },
          ],
          "data": Object {
            "on": Object {
              "click": true,
            },
          },
          "key": "/0/button",
          "sel": "button",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/1/h1/0/text",
              "text": "Hello, world!",
            },
          ],
          "data": Object {},
          "key": "/1/h1",
          "sel": "h1",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "instance-1",
    "payload": Object {},
    "type": "componentInstanceDestroyed",
  },
]
`;

exports[`component user interaction 2`] = `
Array [
  "ComponentInstance object has id: true
",
  "You've clicked a button!
",
  "destroyed!
",
]
`;

exports[`trying to perform event on non-existing component instance result in an error 1`] = `
Array [
  Object {
    "componentInstanceId": "instance-1",
    "payload": Object {
      "updateId": 1,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/button/0/text",
              "text": "Hello, world!",
            },
          ],
          "data": Object {
            "on": Object {
              "click": true,
            },
          },
          "key": "/0/button",
          "sel": "button",
        },
        Object {
          "children": Array [],
          "data": Object {},
          "key": "/1/h1",
          "sel": "h1",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "instance-1",
    "payload": Object {},
    "type": "componentInstanceDestroyed",
  },
]
`;
